Change of build file to reflect folder layout.

--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -25,7 +25,7 @@ environment=env
 SVN_HOME=${env.HOME}/svn
 
 # Project Home
-BABBLESMS_HOME=${SVN_HOME}/${app.name}/webapp
+BABBLESMS_HOME=${SVN_HOME}/${app.name}/trunk/webapp
 
 # These are related to JBoss WildFly Application Server
 # Ensure that you have set the environment variable $JBOSS_HOME correctly.
