added the contact upload module

--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -97,6 +97,7 @@ compile-jars = \
   postgresql/9.3/postgresql-9.3-1102.jdbc41.jar \
   quartz/2.2.1/quartz-2.2.1.jar \
   quartz/2.2.1/quartz-jobs-2.2.1.jar \
+  supercsv/2.3.1/super-csv-2.3.1.jar \
   slf4j/1.7.5/slf4j-api-1.7.5.jar \
   slf4j/1.7.5/slf4j-log4j12-1.7.5.jar
   
@@ -138,5 +139,6 @@ deploy-jars = \
   quartz/2.2.1/quartz-2.2.1.jar \
   quartz/2.2.1/quartz-jobs-2.2.1.jar \
   quartz/2.2.1/dependencies/c3p0-0.9.1.1.jar \
+  supercsv/2.3.1/super-csv-2.3.1.jar \
   slf4j/1.7.5/slf4j-api-1.7.5.jar \
   slf4j/1.7.5/slf4j-jdk14-1.7.5.jar
