Progress towards sending an SMS from Babble.

--- a/webapp/etc/config.properties
+++ b/webapp/etc/config.properties
@@ -44,9 +44,6 @@ MAX_BYTES_LOCAL_DISK = 1048576000
 #==========================================================
 # Email Settings
 #==========================================================
-# Live Setting:
-# EMAIL_OUTGOING_SMTP = mail.tawi.mobi
-# Simulated Setting:
 EMAIL_OUTGOING_SMTP = smtp.wananchi.com
 
 EMAIL_DISCLAIMER = This message contains confidential information and is intended only for the individual named. If you are not the named addressee you should not disseminate, distribute or copy this e-mail. Please notify the sender immediately by e-mail if you have received this e-mail by mistake and delete this e-mail from your system. E-mail transmission cannot be guaranteed to be secure or error-free as information could be intercepted, corrupted, lost, destroyed, arrive late or incomplete, or contain viruses. The sender therefore does not accept liability for any errors or omissions in the contents of this message, which arise as a result of e-mail transmission. If verification is required please request a hard-copy version. Tawi Commercial Services Ltd, Corner View Centre, Naivasha Road, Nairobi, P.O. Box 20222 - 00100, Nairobi, Kenya, www.tawi.mobi
@@ -60,11 +57,9 @@ EMAIL_DEFAULT_NAME_FROM = Tawi Administrator
 EMAIL_OUTGOING_SMTP_PORT = 25
 
 
-
 #==========================================================
-# SMS Gateway Account Management
+# Account Management
 #==========================================================
-
 # Variables to do with the administrator session
 ADMIN_USERNAME = admin
 ADMIN_PASSWORD = admin
@@ -72,16 +67,16 @@ ADMIN_PASSWORD = admin
 # This must match what is in the table 'accountStatus'
 ACCOUNT_ACTIVE_UUID = acecb9fa-7e21-455d-8abb-c61a840cdbec
 
-# Variables to do with the SMS Gateway
-API_URL = http://192.168.0.16/SMSGW/sendsms
-
 
 
 #==========================================================
-# Network Operator Settings
+# SMS Gateway Management
 #==========================================================
-EXTERNAL_CODE_SAFARICOM = 12345
-EXTERNAL_CODE_AIRTEL = 54321
+# TODO: Each Babble account should have its own SMS Gateway endpoint, API 
+# username and password.
+SMSGW_API_URL = http://localhost:8080/SMSGateway/sendsms
+SMSGW_USERNAME = tawi
+SMSGW_PASSWORD = tawi123
 
 
 
