--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -80,6 +80,8 @@ compile-jars = \
   apache/commons/math/3.3/commons-math3-3.3.jar \
   apache/commons/pool/1.5.7/commons-pool-1.5.7.jar \
   apache/commons/validator/1.4.0/commons-validator-1.4.0.jar \
+  apache/HttpComponents/4.3.6/client/httpclient-4.3.6.jar \
+  apache/HttpComponents/4.3.6/client/httpcore-4.3.3.jar \
   apache/poi/3.10/poi-3.10-FINAL-20140208.jar \
   apache/poi/3.10/poi-ooxml-3.10-FINAL-20140208.jar \
   ehcache/2.8.3/ehcache-2.8.3.jar \
@@ -118,6 +120,8 @@ deploy-jars = \
   apache/commons/logging/1.1.3/commons-logging-1.1.3.jar \
   apache/commons/pool/1.5.7/commons-pool-1.5.7.jar \
   apache/commons/validator/1.4.0/commons-validator-1.4.0.jar \
+  apache/HttpComponents/4.3.6/client/httpclient-4.3.6.jar \
+  apache/HttpComponents/4.3.6/client/httpcore-4.3.3.jar \
   apache/poi/3.10/poi-3.10-FINAL-20140208.jar \
   apache/poi/3.10/poi-ooxml-3.10-FINAL-20140208.jar \
   apache/poi/3.10/poi-ooxml-schemas-3.10-FINAL-20140208.jar \
