Reverted to gson library

--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -101,9 +101,7 @@ compile-jars = \
   quartz/2.2.1/quartz-jobs-2.2.1.jar \
   slf4j/1.7.5/slf4j-api-1.7.5.jar \
   slf4j/1.7.5/slf4j-log4j12-1.7.5.jar \
-  supercsv/2.3.1/super-csv-2.3.1.jar \
-  json/2011-05-04/java-json.jar
-
+  supercsv/2.3.1/super-csv-2.3.1.jar
 
 deploy-jars = \
   apache/commons/beanutils/1.9.1/commons-beanutils-1.9.1.jar \
@@ -145,5 +143,4 @@ deploy-jars = \
   quartz/2.2.1/dependencies/c3p0-0.9.1.1.jar \
   slf4j/1.7.5/slf4j-api-1.7.5.jar \
   slf4j/1.7.5/slf4j-jdk14-1.7.5.jar \
-  supercsv/2.3.1/super-csv-2.3.1.jar \
-  json/2011-05-04/java-json.jar
+  supercsv/2.3.1/super-csv-2.3.1.jar
