Progress in composition of SMS.

--- a/webapp/etc/config.properties
+++ b/webapp/etc/config.properties
@@ -75,8 +75,8 @@ ACCOUNT_ACTIVE_UUID = acecb9fa-7e21-455d-8abb-c61a840cdbec
 # TODO: Each Babble account should have its own SMS Gateway endpoint, API 
 # username and password.
 SMSGW_API_URL = http://localhost:8080/SMSGateway/sendsms
-SMSGW_USERNAME = tawi
-SMSGW_PASSWORD = tawi123
+SMSGW_USERNAME = impala
+SMSGW_PASSWORD = impala
 
 
 
