--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -69,7 +69,7 @@
     </servlet>
     <servlet>
         <servlet-name>SendSMS</servlet-name>
-        <servlet-class>ke.co.tawi.babblesms.server.servlet.accountmngmt.SendSMS</servlet-class>
+        <servlet-class>ke.co.tawi.babblesms.server.servlet.sms.send.SendSMS</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>EditAccount</servlet-name>
@@ -138,7 +138,7 @@
     </servlet>
     <servlet>
         <servlet-name>callback</servlet-name>
-        <servlet-class>ke.co.tawi.babblesms.server.servlet.callback.Callback</servlet-class>
+        <servlet-class>ke.co.tawi.babblesms.server.servlet.sms.callback.Callback</servlet-class>
     </servlet>
 
     <servlet>
