forgotpassword.jsp,servlet/account/settings.java

--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
@@ -54,6 +54,15 @@
         <servlet-name>Logout</servlet-name>
         <servlet-class>ke.co.tawi.babblesms.server.servlet.accountmngmt.Logout</servlet-class>
     </servlet>
+
+
+<servlet>
+<servlet-name>Password</servlet-name>
+<servlet-class>ke.co.tawi.babblesms.server.servlet.account.settings.Password</servlet-class>
+</servlet>
+
+
+
 
 
 
@@ -193,6 +202,15 @@
         <servlet-name>Logout</servlet-name>
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
+
+
+
+<servlet-mapping>
+<servlet-name>Password</servlet-name>
+<url-pattern>/account/reset</url-pattern>
+</servlet-mapping>
+
+
 
     
 
