Progress to ajax get groups servlet.

--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -137,6 +137,7 @@ deploy-jars = \
   jfreechart/jfreechart/1.0.19/jfreechart-1.0.19.jar \
   joda-time/2.4/joda-time-2.4.jar \
   log4j/1.2.17/log4j-1.2.17.jar \
+  oracle/javamail/1.5.3/javax.mail.jar \
   postgresql/9.3/postgresql-9.3-1102.jdbc41.jar \
   quartz/2.2.1/quartz-2.2.1.jar \
   quartz/2.2.1/quartz-jobs-2.2.1.jar \
