Allowing for the cache file to be set from the config file.

--- a/webapp/etc/config.properties
+++ b/webapp/etc/config.properties
@@ -38,7 +38,7 @@ DATABASE_POOL_SIZE = 10
 #==========================================================
 MAX_BYTES_LOCAL_HEAP = 20971520
 MAX_BYTES_LOCAL_DISK = 1048576000
-
+CACHE_FILE = BabbleSMS
 
 
 #==========================================================
