Progress on reset password feature.

--- a/webapp/etc/config.properties
+++ b/webapp/etc/config.properties
@@ -44,7 +44,7 @@ CACHE_FILE = BabbleSMS
 #==========================================================
 # Email Settings
 #==========================================================
-EMAIL_OUTGOING_SMTP = smtp.wananchi.com
+EMAIL_OUTGOING_SMTP = mail.tawi.mobi
 
 EMAIL_DISCLAIMER = This message contains confidential information and is intended only for the individual named. If you are not the named addressee you should not disseminate, distribute or copy this e-mail. Please notify the sender immediately by e-mail if you have received this e-mail by mistake and delete this e-mail from your system. E-mail transmission cannot be guaranteed to be secure or error-free as information could be intercepted, corrupted, lost, destroyed, arrive late or incomplete, or contain viruses. The sender therefore does not accept liability for any errors or omissions in the contents of this message, which arise as a result of e-mail transmission. If verification is required please request a hard-copy version. Tawi Commercial Services Ltd, Corner View Centre, Naivasha Road, Nairobi, P.O. Box 20222 - 00100, Nairobi, Kenya, www.tawi.mobi
 
